Name:          websockets-snap
Version:       0.9.1.0
Synopsis:      Snap integration for the websockets library
Description:   Snap integration for the websockets library
License:       BSD3
License-file:  LICENSE
Author:        Jasper Van der Jeugt <m@jaspervdj.be>
Maintainer:    Jasper Van der Jeugt <m@jaspervdj.be>
Category:      Network
Build-type:    Simple
Cabal-version: >= 1.6

Extra-source-files:
  CHANGELOG

Library
  Hs-source-dirs: src
  Ghc-options:    -Wall

  Exposed-modules:
    Network.WebSockets.Snap

  Build-depends:
    base          >= 4   && < 5,
    bytestring    >= 0.9 && < 0.11,
    enumerator    >= 0.4 && < 0.5,
    mtl           >= 2.1 && < 2.3,
    snap-core     >= 0.8 && < 0.10,
    snap-server   >= 0.8 && < 0.10,
    websockets    >= 0.9 && < 0.10

Source-repository head
  Type:     git
  Location: https://github.com/jaspervdj/websockets-snap
