Name:          websockets-snap
Version:       1.0.0.0
Synopsis:      Snap integration for the websockets library
Description:   Snap integration for the websockets library
License:       BSD3
License-file:  LICENSE
Author:        Jasper Van der Jeugt <m@jaspervdj.be>
Maintainer:    Jasper Van der Jeugt <m@jaspervdj.be>
Category:      Network
Build-type:    Simple
Cabal-version: >= 1.6

Library
  Hs-source-dirs: src

  Exposed-modules:
    Network.WebSockets.Snap

  Build-depends:
    base        >= 4   && < 5,
    snap-core   >= 1.0 && < 1.1,
    snap-server >= 1.0 && < 1.1,
    websockets  >= 0.9.5 && < 0.10

Source-repository head
  Type:     git
  Location: https://github.com/jaspervdj/websockets-snap
